tests/NormalTests/paczka1/fuzzy1/17519493.err
Error in line 3: A22 A299 60,6
Error in line 11: q8z6II A22 20,4
Error in line 27: q8z6II A22 67,8
